<resources>
    <string name="app_name">ScheduledFridge</string>
    <string name="nav_header_title">Scheduled Fridge</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="menu_history">History</string>
    <string name="menu_statistics">Statistics</string>
    <string name="ExpirationDate">Expiration Date</string>
    <string name="Name">Name</string>
    <string name="Type">Type</string>
    <string name="Quantity">Quantity</string>
    <string name="daysLeft">daysLeft</string>
    <string name="datePattern">d/M/yyyy</string>
    <string name="Expired">Expired</string>
    <string name="Days">days</string>
    <string name="Cancel">Cancel</string>
    <string name="Add">Add</string>
    <string name="QuantityWithColon">Quantity:</string>
    <string name="NameWithColon">Name:</string>
    <string name="TypeWithColon">Type:</string>
    <string name="ExpirationDateWithColon">Expiration Date:</string>
    <string name="AddedDateWithColon">Added Date:</string>
    <string name="Search">Search</string>
    <string name="Search...">Search…</string>
    <string name="Settings">Settings</string>
    <string name="NightMode">Night Mode</string>
    <string name="ColorsTheme">Colors Theme</string>
    <string name="Notifications">Notifications</string>
    <string name="notification_title">Fridge</string>
    <string name="notification_chanel_id" translatable="false">fcm_default_channel</string>
    <string name="dataBase_name">PRODUCT_DATABASE</string>
    <string name="id">Id</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="notification_group_id">PRODUCT_GROUP</string>
    <string name="daysLeftToExpire">days left to expire!</string>
    <string name="notificationEnabled">notificationEnabled</string>
    <string name="nightMode">NightMode</string>
    <string name="max26Char">Name should be max length of 26 characters!</string>
    <string name="fieldMustNotBeEmpty">"Field must not be empty "</string>
    <string name="quantityMax5Char">Quantity should be max length of 5 numbers!</string>
    <string name="selectOneOfTypes">Select one of types!</string>
    <string name="scheduleWhenToNotify">Schedule when to notify</string>
    <string name="howManyDaysBefore">How many days before expiration:</string>
    <string name="atWhatTime">At what time</string>
    <string name="sortBy">Sort by:</string>
    <string name="appPreferences">AppPreferences</string>
    <string name="sortingSelected">SortingSelected</string>
    <string name="delete">delete</string>
    <string name="select">Select</string>
    <string name="Edit">Edit</string>
    <string name="selectProducts">Select products</string>
    <string name="sameWhenAdded">Same time when added</string>
    <string name="daysBeforeExpired">DaysBeforeExpired</string>
    <string name="select_day">Select day</string>
    <string name="thereIsAlreadySameDay">There is already same added day!</string>
    <string name="deletedProducts">Deleted Products</string>
    <string name="eaten">Eaten</string>
    <string name="thrownAway">Thrown Away</string>
    <string-array name="types">
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Sweets</item>
        <item>Animal origin</item>
        <item>Grain products</item>
        <item>Drinks</item>
        <item>Spices</item>
        <item>Meat</item>
        <item>Others</item>
    </string-array>
    <string-array name="sortBy">
        <item>Last added last</item>
        <item>Last added first</item>
        <item>Shorted shelf life first</item>
        <item>Shorted shelf life last</item>
        <item>Name A-Z</item>
        <item>Name Z-A</item>
        <item>Types </item>
    </string-array>
    <string-array name="daysBefore">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>



</resources>