<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.scheduledfridge.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_productDetails"
            app:destination="@id/nav_productDetails" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.scheduledfridge.ui.statistics.statisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.scheduledfridge.ui.history.historyFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_productDetails"
        android:name="com.example.scheduledfridge.ui.productDetails.ProductDetailsFragment"
        android:label="Product Details"
        tools:layout="@layout/fragment_product_details"/>
</navigation>