<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
  >


        <com.google.android.material.textfield.TextInputLayout
         android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/Name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColorHint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/colorText"
                android:id="@+id/add_product_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
            android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/bottom_stroke"
        android:elevation="5dp"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginEnd="4dp"
            app:layout_constraintHorizontal_weight="1"
            android:hint="@string/ExpirationDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.88"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
           app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColorHint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/colorText"
                android:id="@+id/date_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:focusable="false"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:background="@null"
            android:id="@+id/calendar_ImageButton"
            app:layout_constraintWidth_percent="0.08"
            android:layout_margin="4dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/bottom_stroke"
        android:elevation="5dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="4dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.47"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorText"
            android:hint="@string/Type">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:background="@color/colorBackground"
                android:textColor="@color/colorText"
                android:id="@+id/type_AutoCompleteTextView"
                android:inputType="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginEnd="4dp"
            app:layout_constraintHorizontal_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.47"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColorHint="@color/colorText"
            android:hint="@string/Quantity">

            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/colorText"
                android:id="@+id/quantity_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp">

        <Button
            android:id="@+id/btn_add"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            android:text="@string/Add"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginEnd="12dp"
            android:layout_toStartOf="@id/btn_add"
            android:text="@string/Cancel"/>


    </RelativeLayout>
</LinearLayout>