<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ColorsTheme"
    style="@style/TextAppearance.MaterialComponents.Headline5"

    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:textColor="@color/colorPrimary"
    />
        <ImageView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:elevation="5dp"
            android:src="@drawable/bottom_stroke"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/_imageBrightness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_brightness_4_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:textColor="@color/colorText"
                android:layout_marginStart="4dp"
                app:layout_constraintLeft_toRightOf="@id/_imageBrightness"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:text="@string/NightMode"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial_nightMode_settings"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notifications"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_marginStart="8dp"

            android:textColor="@color/colorPrimary"
            />
        <ImageView
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:elevation="5dp"
            android:src="@drawable/bottom_stroke"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/_imageNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notifications"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:textColor="@color/colorText"
                android:layout_marginStart="4dp"
                app:layout_constraintLeft_toRightOf="@id/_imageNotifications"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:text="@string/Notifications"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchMaterial_notification_settings"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:id="@+id/subOptions_layout_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification_calendar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:textColor="@color/colorText"
                android:layout_marginStart="4dp"
                app:layout_constraintLeft_toRightOf="@id/_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:text="@string/scheduleWhenToNotify"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_marginTop="4dp"
            android:textColor="@color/colorText"
            android:layout_marginStart="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MdcTypographyStyles.Subtitle3"
            android:text="@string/howManyDaysBefore"/>
        <androidx.core.widget.NestedScrollView
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="3"
               android:layout_marginEnd="4dp"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="2"
               android:layout_marginEnd="4dp"
               />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="1"
               android:layout_marginEnd="4dp"
               />




       </LinearLayout>


        </androidx.core.widget.NestedScrollView>
            <TextView
                android:layout_marginTop="4dp"
                android:textColor="@color/colorText"
                android:layout_marginStart="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.MdcTypographyStyles.Subtitle3"
                android:text="@string/atWhatTime"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Same as when added"

                    />
                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>